<resources>
    <!--App-->
    <string name="app_name">AirQueue</string>

    <!--Activities-->
    <string name="activity_label_login">AirQueue</string>
    <string name="activity_label_register">Sign In</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Buttons-->
    <string name="button_sign_in">SIGN IN</string>

    <!--Hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>


    <string name="text_dont_have_account_question">Don\'t have an account?</string>
    <string name="text_create_account">Create account</string>
    <string name="text_full_name">%1$s %2$s</string>

    <!--Progress Dialogs-->
    <string name="progress_title_please_wait">Please wait&#8230;</string>
    <string name="progress_message_loading">Loading&#8230;</string>

    <!--Errors-->
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_email_not_registered">This email is not registered.</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_newtork_error">Network error.\nPlease verify your internet connection.</string>
    <string name="error_default_error">An error occurred.</string>
    <string name="error_field_required">This field is required.</string>

    <!--Menu actions-->
    <string name="action_settings">Settings</string>
    <string name="action_title_logout">Log out</string>
    <string name="action_title_home">Home</string>
    <string name="action_title_settings">Settings</string>
    <string name="action_title_visualizations">Visual</string>


    <!--Arrays-->
    <string-array name="tabs_titles">
        <item>Circular</item>
        <item>Linear</item>
        <item>Pie</item>
    </string-array>

    <string-array name="vis_tabs_titles">
        <item>Overview</item>
        <item>Pollutants</item>
        <item>Graphics</item>
    </string-array>

    <!-- Facebook -->
    <string name="facebook_app_id">633432356804887</string>

    <!-- LinearChartsFragment spinner sources -->
    <string-array name="options_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- Login layout resources -->
    <string name="asthma_sufferer">Asthma sufferer:</string>
    <string name="gender">Gender:</string>
    <string name="sensibility">Sensibility:</string>
    <string name="age">Age:</string>

    <!-- Lorem -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>

    <string name="personalized_help">You can personalize your sensitivity level. If know you are sensitive to bad air quality levels, the advice will adjust according your preference.</string>
    <string name="air_quality_sensitivity">This is based on the COMEAP air pollution banding. Levels go from low pollution, to very high pollution. The air quality advice depends on this level.</string>
    <string name="air_quality_live">Pollutants are updated approximately every hour, this depends on the local authorities sensors spread over the city.</string>
    <string name="line_pollutantse">Select single pollutants to visualize how good or bad are the readings from the background color.</string>
    <string name="air_quality_advice">Health advice comes from an advice server with data from the committee on Medical Effects of Air Pollutants.</string>


</resources>
