<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:src="@drawable/background_login"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.login.LoginActivity"
        >

        <RelativeLayout
            android:id="@+id/linear_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_view_padding_title"
                android:id="@+id/imageAirQueueLogo"
                android:layout_alignParentStart="false"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_logo_white"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageAirQueueLogo"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/edit_text_password"
                    android:padding="@dimen/list_view_padding_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_text_size"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail_outline_white_24dp"
                    android:drawablePadding="@dimen/input_drawable_padding"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/viewDividerEmail"
                android:background="@android:color/white"
                android:layout_below="@id/til_email"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText"
                android:layout_below="@id/viewDividerEmail">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/list_view_padding_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/login_text_size"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock_outline_white_24dp"
                    android:drawablePadding="@dimen/input_drawable_padding"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/viewDividerPassword"
                android:background="@android:color/white"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_below="@id/til_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/button_sign_in"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/buttonLogin"
                android:onClick="onSignInPressed"
                android:layout_below="@id/viewDividerPassword"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_dont_have_account"
                    android:text="@string/text_dont_have_account_question"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/margin_small"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/text_create_account"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@android:color/white"
                    android:layout_margin="2dp"
                    android:id="@+id/buttonSignUp"
                    android:onClick="onSignUpPressed"
                    android:layout_below="@id/text_dont_have_account"/>
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>